--- a/css/index.css
+++ b/css/index.css
@@ -208,6 +208,12 @@ input[type=text]:placeholder {
   animation-delay: 0.4s;
   margin: 15px;
 }
+
+.fadeIn.first p {
+  font-family: 'PT Sans Narrow', sans-serif; 
+  font-size: 26px;
+}
+
 .fadeIn.second {
   -webkit-animation-delay: 0.6s;
   -moz-animation-delay: 0.6s;
